<resources>
    <string name="app_name">TranslatorApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_text">Type text</string>
    <string name="translate_to">Translate to</string>
    <string name="translate_from">Translate from</string>
    <string name="language_from">Language from</string>
    <string name="language_to">Language to</string>
</resources>